--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ where = ["."]
 include = ["*"]
 exclude = []
 
+[tool.setuptools.package-data]
+assets = ["assets/*"]
+
 [tool.isort]
 multi_line_output = 3
 profile = "black"
